Stop extra padding being added to first line of code blocks

--- a/resources/main.css
+++ b/resources/main.css
@@ -275,6 +275,9 @@ code {
   font-family: "courier";
   font-size: 14px;
   color: #333;
+}
+
+p code {
   padding: 0 3px;
 }
 
